<resources>
    <string name="app_name">ToneJudge</string>
    <string name="app_logo">App Logo</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>

    <string name="title_activity_register">Register</string>
    <string name="title_activity_judge">Judge</string>
    <string name="title_activity_history">History</string>
    <string name="title_activity_top_ranks">Top Ranks</string>
    <string name="title_activity_results">Results</string>

    <!-- Strings related to register -->
    <string name="register_password_confirm">Password (Confirm)</string>
    <string name="register_register">Register</string>
    <string name="register_password">Password (7+ characters)</string>

    <string name="prompt_text_input">Input Text to be Judged</string>
    <string name="judge_submit">Submit</string>
    <string name="judge_wait">Please wait for analysis to finish.</string>

    <string name="app_description">Welcome!</string>
    <string name="login_email">Email</string>
    <string name="login_password">Password</string>
    <string name="login">Login</string>
    <string name="or">OR</string>
    <string name="register">Register</string>
    <string name="register_email">Email</string>
    <string name="register_confirm_password">Confirm Password</string>
    <string name="register_submit">Submit</string>
    <string name="register_sign_up">Don\'t have an account? Sign Up</string>
    <string name="title_activity_nav_drawer">NavDrawerActivity</string>

    <string name="shared_prefs">SHARED_PREFS</string>
    <string name="email">email</string>
    <string name="password">password</string>
    <string name="DATABASE_NAME">ToneJudge.db</string>

    <string-array name="DB_COLUMN_NAMES">
        <item>id</item>
        <item>message</item>
        <item>anger</item>
        <item>disgust</item>
        <item>fear</item>
        <item>joy</item>
        <item>sadness</item>
        <item>analytical</item>
        <item>confident</item>
        <item>tentative</item>
        <item>openness</item>
        <item>conscientiousness</item>
        <item>extraversion</item>
        <item>agreeableness</item>
        <item>[emotional range]</item>
    </string-array>

    <string-array name="JSON_KEY_NAMES">
        <item>score</item>
        <item>tone_name</item>
        <item>Anger</item>
        <item>Disgust</item>
        <item>Fear</item>
        <item>Joy</item>
        <item>Sadness</item>
        <item>Analytical</item>
        <item>Confident</item>
        <item>Tentative</item>
        <item>Openness</item>
        <item>Conscientiousness</item>
        <item>Extraversion</item>
        <item>Agreeableness</item>
        <item>Emotional Range</item>
        <item>category_id</item>
        <item>emotion_tone</item>
        <item>language_tone</item>
        <item>social_tone</item>
        <item>tones</item>
        <item>category_name</item>
        <item>Emotion Tone</item>
        <item>Language Tone</item>
        <item>Social Tone</item>
    </string-array>

    <string name="CREATE_RESULT_SQL">
        CREATE TABLE IF NOT EXISTS Result
        (id INTEGER PRIMARY KEY AUTOINCREMENT NOT NULL,
        message TEXT,
        anger CHAR(20),
        disgust CHAR(20),
        fear CHAR(20),
        joy CHAR(20),
        sadness CHAR(20),
        analytical CHAR(20),
        confident CHAR(20),
        tentative CHAR(20),
        openness CHAR(20),
        conscientiousness CHAR(20),
        extraversion CHAR(20),
        agreeableness CHAR(20),
        [emotional range] CHAR(20))
    </string>

    <string name="DROP_RESULT_SQL">
        DROP TABLE IF EXISTS Result
    </string>
    
    <string name="anger_definition">
        Evoked due to injustice, conflict, humiliation, negligence or betrayal. If anger is active, the individual attacks the target, verbally or physically. If anger is passive, the person silently sulks and feels tension and hostility.
    </string>
    <string name="joy_definition">
        Joy or happiness has shades of enjoyment, satisfaction and pleasure. There is a sense of well-being, inner peace, love, safety and contentment.
    </string>
    <string name="fear_definition">
        A response to impending danger. It is a survival mechanism that is a reaction to some negative stimulus. It may be a mild caution or an extreme phobia.
    </string>
    <string name="sadness_definition">
        Indicates a feeling of loss and disadvantage. When a person can be observed to be quiet, less energetic and withdrawn, it may be inferred that sadness exists.
    </string>
    <string name="disgust_definition">
        An emotional response of revulsion to something considered offensive or unpleasant. It is a sensation that refers to something revolting.
    </string>
    <string name="openness_definition">
        The extent a person is open to experience a variety of activities.
    </string>
    <string name="conscientiousness_definition">
        The tendency to act in an organized or thoughtful way.
    </string>
    <string name="extraversion_definition">
        The tendency to seek stimulation in the company of others.
    </string>
    <string name="agreeableness_definition">
        The tendency to be compassionate and cooperative towards others.
    </string>
    <string name="emotional_range_definition">
        The extent a person\'s emotion is sensitive to the environment.
    </string>
    <string name="analytic_definition">
        A person\'s reasoning and analytical attitude about things.
    </string>
    <string name="confidence_definition">
        A person\'s degree of certainty.
    </string>
    <string name="tentative_definition">
        A person\'s degree of inhibition.
    </string>

    <string name="openness_meaning_low">
        More likely to be perceived as no-nonsense, straightforward, blunt, or preferring tradition and the obvious over the complex, ambiguous, and subtle.
    </string>
    <string name="openness_meaning_high">
        More likely to be perceived as intellectual, curious, emotionally-aware, imaginative, willing to try new things, appreciating beauty, or open to change.
    </string>
    <string name="conscientiousness_meaning_low">
        More likely to be perceived as spontaneous, laid-back, reckless, unmethodical, remiss, or disorganized.
    </string>
    <string name="conscientiousness_meaning_high">
        More likely to be perceived as disciplined, dutiful, achievement-striving, confident, driven, or organized.
    </string>
    <string name="extraversion_meaning_low">
        More likely to be perceived as independent, timid, introverted, restrained, boring, or dreary.
    </string>
    <string name="extraversion_meaning_high">
        More likely to be perceived as engaging, seeking attention, needy, assertive, outgoing, sociable, cheerful, excitement-seeking, or busy.
    </string>
    <string name="agreeableness_meaning_low">
        More likely to be perceived as selfish, uncaring, uncooperative, self-interested, confrontational, skeptical, or arrogant.
    </string>
    <string name="agreeableness_meaning_high">
        More likely to be perceived as caring, sympathetic, cooperative, compromising, trustworthy, or humble.
    </string>
    <string name="emotional_range_meaning_low">
        More likely to be perceived as calm, bland, content, relaxed, unconcerned, or careful.
    </string>
    <string name="emotional_range_meaning_high">
        More likely to be perceived as concerned, frustrated, angry, passionate, upset, stressed, insecure, or impulsive.
    </string>
    <string name="analytical_meaning_low">
        Little or no evidence of analytical tone.
    </string>
    <string name="analytical_meaning_high">
        More likely to be perceived as intellectual, rational, systematic, emotionless, or impersonal.
    </string>
    <string name="confidence_meaning_low">
        Little or no evidence of confidence in tone.
    </string>
    <string name="confidence_meaning_high">
        More likely to be perceived as assured, collected, hopeful, or egotistical.
    </string>
    <string name="tentative_meaning_low">
        Little or no evidence of tentativeness in tone.
    </string>
    <string name="tentative_meaning_high">
        More likely to be perceived as questionable, doubtful, or debatable.
    </string>

    <string name="generic_meaning_low">Unlikely to be perceived.</string>
    <string name="generic_meaning_high">High likelihood of being perceived.</string>

    <string name="low_score_definition">Score less than 50%</string>
    <string name="high_score_definition">Score greater than 75%</string>

    <string name="date_format">MM/dd/yyyy HH:mm</string>
    <string name="your_text">Your Text: </string>
    <string name="error">An Error Occurred!</string>
    <string name="publish">Publish</string>

</resources>