<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="@mipmap/backgrond"
    tools:context="group6.tcss450.uw.edu.tonejudge.activities.RegisterActivity">



    <android.support.design.widget.TextInputLayout
        android:layout_marginTop="20dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <AutoCompleteTextView
            android:id="@+id/register_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginStart="10dp"
            android:layout_marginRight="10dp"
            android:hint="@string/register_email"
            android:inputType="textEmailAddress"
            android:maxLines="1"
            android:drawableLeft="@mipmap/username_icon"
            android:drawableStart="@mipmap/username_icon"
            android:drawablePadding="6dp"
            android:textColorHint="@color/white"
            android:textColor="@color/white"/>

    </android.support.design.widget.TextInputLayout>



    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/register_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/register_password"
            android:inputType="textPassword"
            android:maxLines="1"
            android:textColorHint="@color/white"
            android:drawableLeft="@mipmap/password_icon"
            android:drawableStart="@mipmap/password_icon"
            android:drawablePadding="6dp"
            android:textColor="@color/white"
            android:layout_marginLeft="10dp"
            android:layout_marginStart="10dp"
            android:layout_marginRight="10dp"
            android:singleLine="true" />

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/register_password_confirm"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/register_password_confirm"
            android:inputType="textPassword"
            android:textColorHint="@color/white"
            android:drawableLeft="@mipmap/password_icon"
            android:drawableStart="@mipmap/password_icon"
            android:textColor="@color/white"
            android:drawablePadding="6dp"
            android:maxLines="1"
            android:layout_marginLeft="10dp"
            android:layout_marginStart="10dp"
            android:layout_marginRight="10dp"
            android:singleLine="true" />

    </android.support.design.widget.TextInputLayout>

    <ImageButton
        android:id="@+id/register_button"
        android:layout_gravity="center_horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:src="@mipmap/register_btn"
        android:contentDescription="@string/register"
        style="?android:attr/buttonBarButtonStyle"
        android:onClick="onClick"/>

</LinearLayout>